# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: .travis.yml  __init__.py  cli.py  engine.py  game_settings.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
shitcoding_brain_games.egg-info/: PKG-INFO  SOURCES.txt
